// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MR Popover loaded state matches the snapshot 1`] = `
<glpopover-stub
  boundary="viewport"
  class="mr-popover"
  placement="top"
  show=""
  target=""
>
  <div>
    <div
      class="d-flex-center justify-content-between"
    >
      <div>
        <div
          class="issuable-status-box status-box status-box-open"
        >
          
          Open
        
        </div>
         
        <span
          class="text-secondary"
        >
          Opened 
          <time>
            just now
          </time>
        </span>
      </div>
       
      <ciicon-stub
        cssclasses=""
        size="16"
        status="[object Object]"
      />
    </div>
     
    <h5>
      MR Title
    </h5>
     
    <div
      class="text-secondary"
    >
      foo/bar
    </div>
  </div>
</glpopover-stub>
`;

exports[`MR Popover shows skeleton-loader while apollo is loading 1`] = `
<glpopover-stub
  boundary="viewport"
  class="mr-popover"
  placement="top"
  show=""
  target=""
>
  <div>
    <div>
      <glskeletonloading-stub
        class="animation-container-small mt-1"
        lines="1"
      />
    </div>
     
    <h5>
      MR Title
    </h5>
     
    <div
      class="text-secondary"
    >
      foo/bar
    </div>
  </div>
</glpopover-stub>
`;
